# ArgCompile

./: CHANGELOG.md  DESCRIPTION.md  LICENSE  MANIFEST.in  Makefile  README.md  makefile  setup.cfg  setup.py
.github/workflows/: publish.yml
argcompile/: __init__.py  argcompile.py  compiler.py  meta.py
argcompile.egg-info/: PKG-INFO  SOURCES.txt
argcompile/file/: attribute.py  compiler.py
docs/: ARGPARSE.md
src/ahdf/: registry.py
src/ahdf/argcompile/: __init__.py  parse.py  utils.py
src/argcompile/: main.py  meta.py
src/argcompile/file/: __init__.py  attribute.py
