[metadata]
name = argcompile
version = 0.0.9
platforms = ANY

description = An argparse extension to easily manage post-processing of multiple parsed arguments
long_description = file: DESCRIPTION.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE

author = Arthur Henrique Della Fraga
author_email = "Arthur Henrique Della Fraga" <Arthur.Henrique.Della.Fraga@gmail.com>

url = https://github.com/artu-hnrq/argcompile

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
	Operating System :: OS Independent

	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6

	License :: OSI Approved :: MIT License

	Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Utilities

[options]
python_requires = >=3.6

package_dir=
	=src
packages=find:

install_requires =
	PyYAML==3.12

[options.packages.find]
where=src


[aliases]
dist = bdist_wheel sdist

[sdist]
formats = zip

[bdist_wheel]
python_tag = py3

[egg_info]
egg_base = build/lib
